--- a/iNeedClass/Classes/iPhone/BackEnd/AddExchangeViewController.xib
+++ b/iNeedClass/Classes/iPhone/BackEnd/AddExchangeViewController.xib
@@ -18,6 +18,7 @@
                 <outlet property="tableViewMateriasBusco" destination="WHN-0h-v62" id="JrK-2i-4T7"/>
                 <outlet property="tableViewMateriasOfrezco" destination="iLV-Og-wgi" id="4Ts-Yw-QaF"/>
                 <outlet property="textCiudad" destination="pMs-T8-b4s" id="zmj-hT-bnb"/>
+                <outlet property="textDescription" destination="7wu-wV-7lw" id="oXt-fl-B6b"/>
                 <outlet property="textMateriasBusco" destination="R00-C8-MOV" id="vIa-gf-kVZ"/>
                 <outlet property="textMateriasOfrezco" destination="pgC-Kj-Y0T" id="RWq-Um-eFW"/>
                 <outlet property="view" destination="EgW-n5-VNw" id="rwe-PR-gSZ"/>
@@ -25,11 +26,11 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="EgW-n5-VNw">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="510"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="La7-Ib-SkT">
-                    <rect key="frame" x="0.0" y="-58" width="320" height="568"/>
+                    <rect key="frame" x="0.0" y="-58" width="320" height="704"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Materia que ofrezco" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DDS-cf-kKy">
                             <rect key="frame" x="18" y="62" width="286" height="30"/>
@@ -66,7 +67,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ub2-bR-bDH">
-                            <rect key="frame" x="14" y="431" width="103" height="44"/>
+                            <rect key="frame" x="14" y="485" width="103" height="44"/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <state key="normal" title="Ver Anuncio">
                                 <color key="titleColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -77,7 +78,7 @@
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dGI-pv-RuH">
-                            <rect key="frame" x="201" y="431" width="103" height="44"/>
+                            <rect key="frame" x="201" y="485" width="103" height="44"/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <state key="normal" title="Guardar">
                                 <color key="titleColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -94,6 +95,21 @@
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
                         </button>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Descripcion" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xm4-re-BS0">
+                            <rect key="frame" x="18" y="353" width="92" height="21"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <color key="textColor" white="0.96906828700000003" alpha="1" colorSpace="calibratedWhite"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7wu-wV-7lw">
+                            <rect key="frame" x="14" y="378" width="291" height="91"/>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            <connections>
+                                <outlet property="delegate" destination="-1" id="mhv-Ge-yTW"/>
+                            </connections>
+                        </textView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Añadir Intercambio" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p1s-HU-nIo">
                             <rect key="frame" x="58" y="20" width="234" height="30"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -167,7 +183,7 @@
             </subviews>
             <color key="backgroundColor" red="0.29411764709999999" green="0.75686274509999996" blue="0.82352941180000006" alpha="1" colorSpace="deviceRGB"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="403" y="359"/>
+            <point key="canvasLocation" x="403" y="388"/>
         </view>
     </objects>
 </document>
